# Robot-with-CV

./: README.md
ClientRB/: CMakeLists.txt  CmakeLists.txt
ClientRB/inc/: application.h  clientget.h  recogniser.h  send.h  table.h
ClientRB/src/: Application.cpp  Clientget.cpp  Recogniser.cpp  Send.cpp  Table.cpp  main.cpp
ServerRB/: CMakeLists.txt  CmakeLists.txt
ServerRB/inc/: algorithm.h  server.h
ServerRB/src/: Algorithm.cpp  Server.cpp  main.cpp
